# ntt

./: CMakeLists.txt  README.md  gmath.cpp  ntt.cpp  ntt1.cpp  ntt2.cpp  ntt3.cpp
